# earned-it-data

./: .gitignore  README.md  earned-it-data.code-workspace
airflow/: Dockerfile  Makefile  README.md  cleanup_logs.sh  docker-compose.yml  env.example  pyproject.toml  setup_git_sync.sh  start.sh
airflow/dags/: schedule_danawa_crawling.py  test_dag.py
airflow/dags/danawa_crawling/: Dockerfile  README.md  main.py  pyproject.toml
airflow/dags/test_src/: Dockerfile  README.md  build.sh  main.py  pyproject.toml
airflow/plugins/: .gitkeep
airflow/ssh/: README.md
reindeer/: .pre-commit-config.yaml  DEVELOPMENT_CONVENTIONS.md  Makefile  QUICK_START.md  README.md  env.example  pyproject.toml
reindeer/.github/: pull_request_template.md
reindeer/app/: app.py
reindeer/app/dto/: __init__.py  product_dto.py
reindeer/app/router/: __init__.py  product_router.py
reindeer/browser/: __init__.py
reindeer/browser/adapter/product_fetcher/: naver_fetcher.py
reindeer/browser/adapter/repository/: postgresql_repository.py  s3_repository.py
reindeer/browser/core/entity/: product.py
reindeer/browser/core/infra/: mysql_client.py  naver_client.py  postgresql_client.py  s3_client.py
reindeer/browser/core/port/: image_repository.py  product_fetcher.py  product_repository.py
reindeer/browser/core/usecase/: search_product.py
reindeer/browser/di/: base.py  config.py
reindeer/browser/task/: search.py
