[project]
name = "reindeer"
version = "0.1.0"
description = "제품 검색 engine server"
authors = [
    {name = "youngchannel", email = "youngchannel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"

dependencies = [
    # 웹 프레임워크
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-dotenv==1.0.0",
    # 데이터 검증
    "pydantic==2.5.0",
    # HTTP 클라이언트
    "aiohttp==3.9.1",
    "httpx==0.25.2",
    # 웹 스크래핑
    "beautifulsoup4==4.12.2",
    "lxml==4.9.3",
    "selenium==4.15.2",
    # 데이터베이스
    "aiomysql==0.2.0",
    "pymysql==1.1.0",
    "sqlalchemy==2.0.23",
    # AWS
    "boto3==1.34.0",
    "aioboto3==12.3.0",
    # 기본 이미지 처리 라이브러리
    "numpy==1.24.3",
    "pillow==11.3.0",
    "requests==2.32.3",
    # OpenCV 관련 패키지
    "opencv-python==4.8.0.76",
    "opencv-contrib-python==4.8.0.76",
    "opencv-python-headless==4.8.1.78",
    # 배경 제거 관련
    "rembg==2.0.50",
    "onnxruntime==1.22.1",
    # 과학 계산 라이브러리
    "scipy==1.15.3",
    "scikit-image==0.25.2",
    # 유틸리티
    "tqdm==4.67.1",
    "imageio==2.37.0",
    "dependency-injector>=4.48.1",
    "pydantic-settings>=2.2.1",
    "asyncpg>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.11.0",
    "isort==5.12.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "browser"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build" 
